--- a/style.css
+++ b/style.css
@@ -10,6 +10,26 @@ a {
 
 }
 
+.subsection1 {
+    font-size: 48px;
+    font-weight: 800;
+    color: #F9FaF8;
+}
+
+.subsection2 {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.first {
+    background-color: #3882F6;
+    color: #F9FaF8;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 18px;
+    padding-right: 18px;
+}
+
 .topsection {
     display: flex;
     background-color: #1F2937;
@@ -37,11 +57,30 @@ a {
     background-color: #1F2937;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     gap: 12px;
     align-items: flex-start;
     justify-content: center;
-    width: 300px;
-    height: 150px;
+    padding: 16px;
     padding-top: 28px;
+    width: 400px;
 
 }
+
+.wrapper {
+    display: flex;
+    background-color: #1F2937;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.placeholder {
+    background-color: grey;
+    color: white;
+    display: flex;
+    padding: 100px;
+    margin: 28px;
+    
+}
+
