--- a/style.css
+++ b/style.css
@@ -129,4 +129,28 @@ a {
 
 }
 
+.wrappy {
+    background-color: #E5E7EB;
+    padding: 98px;
+    margin: 60px 0px 35px 0px;
+}
 
+.quote {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 18px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1F2937;
+    font-size: 36px;
+    
+    
+}
+
+.author {
+    display: flex;
+    justify-content: flex-end;
+    font-weight: 900;
+
+}
